--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,126 @@
-.container {
-  padding: 0 2rem;
-}
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,500,700");
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.nav {
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0px;
+  line-height: 70px;
   text-align: center;
+  z-index: 10;
+  display: block;
+  background-color: rgb(130, 118, 187);
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.nav div.logo {
+  float: left;
+  width: auto;
+  height: auto;
+  padding-left: 3rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.nav div.main_list {
+  float: right;
+  height: 65px;
+  padding-left: 20px;
 }
 
-.grid {
+.nav div.main_list ul {
+  width: 100%;
+  height: 65px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
+  list-style: none;
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  padding: 0;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.nav div.main_list .link {
+  width: auto;
+  height: 70px;
+  padding-right: 3rem;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  line-height: 65px;
+  font-size: 1.4rem;
+  padding: 7px 13px;
+  border-radius: 3px;
 }
 
-@media (max-width: 600px) {
-  .grid {
+.nav div.main_list ul li a:hover {
+  background-color: rgb(246, 156, 156);
+  transition: 0.5s;
+}
+.nav div.main_list ul li a.active {
+  background-color: lightcoral;
+}
+
+.nav .nav-icon {
+  height: 100%;
+  justify-content: center;
+  float: right;
+  margin-right: 30px;
+  display: none;
+}
+.nav i {
+  line-height: 70px;
+  font-size: 30px;
+  color:lightcoral;
+}
+
+#check {
+  display: none;
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+
+@media (max-width: 950px) {
+
+  .nav .nav-icon {
+    display: block;
+  }
+  
+  .nav .nav-icon:hover {
+    cursor: pointer;
+  }
+  .nav div.main_list{
+    position: fixed;
+    top: 70px;
+    left: 100%;
+    width: 70%;
+    height: 100vh;
+    background: rgba(3, 101, 182, 0.8);
+    text-align: center;
+    /* opacity: 1; */
+    transition: all 0.5s;
+    z-index: 10;
+  }
+
+  .nav div.main_list ul{
     width: 100%;
-    flex-direction: column;
+    padding-top: 20px;
+    display: block;
   }
-}
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
+  .nav div.main_list ul li a{
+    font-size: 20px;
   }
-  .code {
-    background: #111;
+  .nav div.main_list ul li a:hover, .nav div.main_list ul li a:target {
+    background: none;
+    color: lightcoral;
   }
-  .logo img {
-    filter: invert(1);
+
+  #check:checked ~ div.main_list {
+    left: 35%;
+  }
+  
+  .middle-area {
+    position: fixed !important;
+    top: 70px;
+    width: 100%;
+    overflow: hidden;
+    
   }
 }
