--- a/styles/jumbotron.module.css
+++ b/styles/jumbotron.module.css
@@ -4,7 +4,7 @@
   position: relative;
   /* overflow: hidden; */
   background-color: skyblue;
-  height: calc(100vh - 70px);
+  height: calc(100vh - var(--nav-height));
   margin-bottom: 0px;
   padding: 0;
 }
@@ -61,10 +61,10 @@ img.blur {
 }
 
 .intro_container {
-  position: fixed;
-  top: 170px;
+  position: absolute;
+  top: 0px;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 100px);
   text-align: center;
   justify-content: center;
   z-index: 3;
@@ -72,6 +72,7 @@ img.blur {
 }
 
 .intro_head {
+  padding-top: 100px;
   color: rgba(143, 30, 153, 0.986);
   font-size: 40px;
 }
